<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PitFormScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/PitID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PitID"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/EnterPitID"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent">
        </EditText>

        <TextView
            android:id="@+id/PitType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PitType"
            android:textSize="10pt">
        </TextView>

        <Spinner
            android:id="@+id/PitTypeChoices"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbacktype"
            android:layout_width="fill_parent"
            android:entries="@array/PitTypesArray">
        </Spinner>

        <Button
            android:id="@+id/ButtonSave"
            android:layout_height="wrap_content"
            android:text="@string/ButtonSave"
            android:onClick="SavePitInformation"
            android:layout_width="fill_parent">
        </Button>

        <Button
            android:id="@+id/ButtonCancel"
            android:layout_height="wrap_content"
            android:text="@string/ButtonCancel"
            android:onClick="CancelPitInformation"
            android:layout_width="fill_parent">
        </Button>



    </LinearLayout>
</ScrollView>